deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-deployment
  namespace: dev
spec:
  replicas: 1

  selector:
    matchLabels:
      app: wil-playground

  template:
    metadata:
      labels:
        app: wil-playground

    spec:
      containers:
        - name: wil-playground

          image: wil42/playground:v2

          imagePullPolicy: Always

          ports:
            - containerPort: 8888
