service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-service
  namespace: dev

spec:
  selector:
    app: wil-playground

  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888

  type: LoadBalancer
